# podx

./: .dockerignore  .env.example  .env.example.backup  .envrc  .gitignore  .pre-commit-config.yaml  BROWSER_UI_STANDARDS.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  EXAMPLES.md  INTERACTIVE_FEATURES.md  INTERACTIVE_FETCH.md  Justfile  KUBERNETES.md  MANIFEST.in  MIGRATION_V3.md  ORCHESTRATION_REFACTORING.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_ANALYSIS_INDEX.md  README.md  REFACTORING.md  REFACTORING_PLAN.md  SECURITY.md  SECURITY_AUDIT_v1.0.md  SERVICE_LAYER.md  SESSION_1_SUMMARY.md  SHOW_PROMPT_FEATURE.md  TESTING_TUI.md  TUI_TEST_PLAN.md  TUI_TEST_RESULTS.md  UI_LESSONS_LEARNED.md  VPS_DEPLOYMENT.md  WEB_API.md  codecov.yml  docker-compose.yml  mypy.ini  pipeline-flow.md  (+8 more)
.claude/: AUTO_CONTEXT_GUIDE.md  CLAUDE.md  CONTEXT.md  INTEGRATION_TEST_STATUS.md  README.md  RESUME_PLAN.md  RESUME_SESSION_ORCHESTRATE.md  SESSION_2_SUMMARY.md  SESSION_NOTES.md
.claude/hooks/: update-context.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-diarization.yml  ci.yml  release.yml
Lenny's Podcast/2025-08-17/: analysis-old.md  deepcast-brief.md
deploy/runpod-diarization/: Dockerfile  README.md  handler.py
docs/: ADVANCED.md  API_EXAMPLES.md  API_STABILITY.md  ARCHITECTURE_V2.md  CLI_FIX_PLAN.md  CLI_INCONSISTENCIES.md  CORE_API.md  EXAMPLES.md  FAQ.md  MANIFEST.md  MIGRATION_V1_TO_V2.md  MIGRATION_V2.md  PHASE_3_TEXTUAL_MIGRATION_PLAN.md  PIPELINE_FLOW.md  PLUGINS.md  PLUGIN_ARCHITECTURE_OLD.md  PROCESSING_PIPELINE.md  PROGRESS_REPORTING.md  QUICKSTART.md  QUICK_START.md  TEMPLATES.md  TESTING.md  TROUBLESHOOTING.md
docs/api/: python-api.md
examples/: curl_examples.sh  javascript_client.js  nginx-podx.conf  podx-server.service  python_client.py  sse_client.html  using_async_service_layer.py  using_service_layer.py
examples/api/: README.md  async_usage.py  basic_usage.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
podx/: __init__.py  agreement.py  align.py  api.py  browse.py  cli_shared.py  config.py  consensus.py  constants.py  deepcast.py  device.py  diarize.py  errors.py  export.py  fetch.py  help.py  info.py  io.py  list.py  logging.py  manifest.py  models.py  notion.py  orchestrate.py  performance.py  plugins.py  podcast_config.py  preprocess.py  pricing.py  progress.py  prompt_templates.py  schemas.py  transcode.py  transcribe.py  ui.py  ui_styles.py  validation.py  yaml_config.py  youtube.py
podx/api/: __init__.py  async_client.py  client.py  config.py  legacy.py  models.py  sync_client.py
podx/batch/: __init__.py  discovery.py  processor.py  status.py
podx/builtin_plugins/: __init__.py  anthropic_analysis.py  discord_publish.py  dropbox_source.py  gdrive_source.py  slack_publish.py  webhook_publish.py  youtube_source.py
podx/cli/: aliases.py  analyze.py  analyze_audio.py  ask.py  backfill.py  batch.py  clean.py  cleanup.py  cli_shared.py  cloud.py  completion.py  config.py  deepcast.py  diarize.py  error_helpers.py  estimate.py  export.py  fetch.py  help.py  history.py  info.py  init.py  manifest_tracker.py  models.py  notion.py  orchestrate.py  preprocess.py  search.py  setup_wizard.py  speakers.py  templates.py  transcode.py  transcribe.py  youtube.py
podx/cloud/: __init__.py  config.py  exceptions.py  runpod_client.py  storage.py
podx/core/: __init__.py  analyze.py  ask.py  audio_player.py  audio_quality.py  backfill.py  classify.py  deepcast.py  diarize.py  disk_cleanup.py  export.py  export_legacy.py  fetch.py  history.py  notion.py  obsidian.py  preprocess.py  quotes.py  speakers.py  transcode.py  transcribe.py  youtube.py
podx/domain/: __init__.py  enums.py  exit_codes.py  protocols.py
podx/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  mock.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
podx/models/: __init__.py  catalog.py  models.json
podx/monitoring/: __init__.py  cost_estimator.py
podx/progress/: __init__.py  api.py  base.py  console.py  silent.py
podx/search/: __init__.py  database.py  quotes.py  semantic.py
podx/server/: app.py  database.py  exceptions.py  storage.py
podx/services/: README.md  __init__.py  async_pipeline_service.py  async_step_executor.py  command_builder.py  pipeline_service.py  step_executor.py
podx/state/: __init__.py  artifact_detector.py  run_state.py
podx/storage/: __init__.py  manager.py
podx/studio/: __init__.py  app.py
podx/templates/: __init__.py  manager.py
podx/ui/: __init__.py  align_browser.py  analyze_selector.py  asr_selector.py  config_panel.py  confirmation.py  deepcast_browser.py  diarize_browser.py  download_progress.py  episode_browser_tui.py  episode_selector.py  execution_tui.py  fetch_browser.py  formatters.py  interactive_browser.py  live_timer.py  live_timer_progress.py  preprocess_browser.py  prompts.py  speaker_identify.py  speaker_verify.py  transcode_browser.py  transcribe_browser.py  transcribe_tui.py  two_phase_browser.py
podx/utils/: __init__.py  config_applier.py  file_utils.py  workflow_presets.py
podx/webhooks/: __init__.py  client.py  client.py.bak  manager.py  manager.py.bak
tests/: conftest.py  test_deepcast_show_prompt.py  test_io_minimal.py  test_pipeline_integration.py  test_schemas.py
tests/benchmarks/: README.md  __init__.py  conftest.py  test_analyze_benchmarks.py  test_deepcast_benchmarks.py  test_export_benchmarks.py  test_notion_benchmarks.py  test_preprocessing_benchmarks.py  test_transcription_benchmarks.py
tests/deprecated_tests/: test_analyze_optimizations.py  test_build_pipeline_config.py  test_deepcast_optimizations.py  test_execute_enhancement.py  test_execute_fetch.py  test_execute_transcribe.py  test_pipeline_integration.py  test_preprocess_optimizations.py
tests/integration/: conftest.py  test_error_handling.py  test_file_uploads.py  test_full_pipeline.py  test_processing_endpoints.py  test_server_jobs.py
(+162 files in other folders)
