[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podx"
version = "2.0.0"
description = "Composable podcast pipeline: fetch → transcode → transcribe → diarize → preprocess → deepcast"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "You" }]
dependencies = [
  "click~=8.3.0",
  "rich-click~=1.9.3",
  "rich~=14.1.0",
  "textual~=1.0.0",
  "requests~=2.32.5",
  "feedparser~=6.0.12",
  "python-dateutil~=2.9.0",
  "python-slugify~=8.0.4",
  "soundfile~=0.13.1",
  "pydantic~=2.12.0",
  "pydantic-settings~=2.11.0",
  "tenacity~=9.1.2",
  "structlog~=25.4.0",
  "psutil~=7.1.0",
  "PyYAML~=6.0.3",
  "yt-dlp~=2025.9.26",
]

[project.optional-dependencies]
asr = ["faster-whisper~=1.2.0"]
whisperx = ["whisperx @ git+https://github.com/m-bain/whisperx.git"]
llm = ["openai~=2.2.0", "tiktoken~=0.12.0"]
notion = ["notion-client~=2.5.0"]
dev = [
  "pytest~=8.4.2",
  "pytest-asyncio~=1.2.0",
  "pytest-cov~=7.0.0",
  "pytest-timeout~=2.3.1",
  "pytest-benchmark~=5.2.3",
  "ruff~=0.14.0",
  "mypy~=1.18.2",
  "types-requests~=2.32.4",
  "types-python-dateutil~=2.9.0",
]

[project.scripts]
podx-fetch = "podx.cli.fetch:main"
podx-transcode = "podx.cli.transcode:main"
podx-transcribe = "podx.cli.transcribe:main"
podx-diarize = "podx.cli.diarize:main"
podx-export = "podx.cli.export:main"
podx-deepcast = "podx.cli.deepcast:main"
podx-notion = "podx.cli.notion:main"
podx-preprocess = "podx.cli.preprocess:main"
podx-models = "podx.cli.models:main"
podx-run = "podx.cli.orchestrate:run_main"
podx = "podx.cli.orchestrate:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["podx"]

# Benchmark configuration
[tool.pytest-benchmark]
# Only compare benchmarks within the same group
group-by = "group"
# Save benchmark results
save = true
save-data = true
# Auto-save baseline when running benchmarks
autosave = true
# Compare against previous benchmarks
compare = true
# Columns to display
columns = "min, max, mean, stddev, median, iqr, outliers, rounds, iterations"

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
