[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podx"
version = "4.1.0"
description = "Composable podcast pipeline: fetch → transcode → transcribe → diarize → preprocess → analyze"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "You" }]
dependencies = [
  "click~=8.1.0",
  "rich~=14.1.0",
  "requests~=2.32.5",
  "feedparser~=6.0.12",
  "python-dateutil~=2.9.0",
  "python-slugify~=8.0.4",
  "soundfile~=0.13.1",
  "pydantic~=2.12.0",
  "pydantic-settings~=2.11.0",
  "tenacity~=9.1.2",
  "structlog~=25.4.0",
  "psutil~=7.1.0",
  "PyYAML~=6.0.3",
  "yt-dlp~=2025.9.26",
  "reportlab~=4.0.0",
]

[project.optional-dependencies]
asr = ["faster-whisper~=1.2.0"]
whisperx = ["whisperx @ git+https://github.com/m-bain/whisperx.git"]
llm = ["openai~=2.2.0", "tiktoken~=0.12.0"]
notion = ["notion-client~=2.5.0"]
audio-analysis = ["librosa~=0.10.0"]
search = [
  "sentence-transformers~=2.2.0",
  "faiss-cpu>=1.8.0",
  "scikit-learn~=1.3.0",
]
server = [
  "fastapi~=0.115.0",
  "uvicorn[standard]~=0.34.0",
  "sqlalchemy~=2.0.36",
  "greenlet~=3.0.0",  # Required for SQLAlchemy async on macOS/Windows
  "aiosqlite~=0.20.0",
  "sse-starlette~=2.2.1",
  "prometheus-client~=0.21.0",  # Optional: for metrics endpoint
  "slowapi~=0.1.9",
  "python-multipart~=0.0.20",  # Required for form data handling
]
cloud = [
  "boto3>=1.34.0",   # R2/S3 storage
  "httpx>=0.27.0",   # RunPod API client
]
dev = [
  "pytest~=8.4.2",
  "pytest-asyncio~=1.2.0",
  "pytest-cov~=7.0.0",
  "pytest-timeout~=2.3.1",
  "pytest-benchmark~=5.2.3",
  "ruff~=0.14.0",
  "mypy~=1.17.0",
  "types-requests~=2.32.4",
  "types-python-dateutil~=2.9.0",
  "types-Markdown~=3.7.0",
  "types-PyYAML~=6.0.0",
  "black~=25.1.0",
  "isort~=5.13.0",
  "tox~=4.0.0",
  # Include optional dependencies for testing
  "librosa~=0.10.0",
  "sentence-transformers~=2.2.0",
  "faiss-cpu>=1.8.0",
  "scikit-learn~=1.3.0",
  "openai~=2.2.0",
  "tiktoken~=0.12.0",
  "notion-client~=2.5.0",
]

[project.scripts]
# v3.0.0: Unified CLI - all commands available via 'podx <command>'
# BREAKING CHANGE: Removed all podx-verb entry points
# Migration: podx-transcribe → podx transcribe, podx-run → podx run, etc.
# Shell completion: Use Click's native completion (_PODX_COMPLETE=<shell>_source podx)
podx = "podx.cli.orchestrate:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"podx.models" = ["*.json"]
"podx.templates" = ["*.yaml"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["podx"]

# Benchmark configuration
[tool.pytest-benchmark]
# Only compare benchmarks within the same group
group-by = "group"
# Save benchmark results
save = true
save-data = true
# Auto-save baseline when running benchmarks
autosave = true
# Compare against previous benchmarks
compare = true
# Columns to display
columns = "min, max, mean, stddev, median, iqr, outliers, rounds, iterations"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.coverage.run]
source = ["podx"]
omit = [
  "podx/ui/*",
  "podx/ui_styles.py",
  "*/tests/*",
  "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = false
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true

# Disable error codes that are too noisy for our codebase
disable_error_code = "no-untyped-def"
